Trying to fix a few bugs:
* Added a warning about html2canvas' scroll limitation
* Increased the height of the Idris ship, as it was getting cut off
* Changed the rendering methods slightly.

--- a/content/styles/Ships.css
+++ b/content/styles/Ships.css
@@ -86,7 +86,7 @@
 }
 .Idris
 {
-    height:85px;
+    height:110px;
     width:475px;
     background-position:0 -530px;
 }
